--- a/stack.yaml
+++ b/stack.yaml
@@ -2,7 +2,7 @@ packages:
 - .
 extra-deps:
 - brick-0.47
-- grid-7.8.12
+- directory-1.3.3.2
 - config-ini-0.2.4.0
 - data-clist-0.1.2.2
 - text-zipper-0.10.1
